all items added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,113 @@
     <title>Document</title>
 </head>
 <body>
+    <ul id="todo-list">
+        <li>
+            <h2>Boucliers</h2>
+        </li>
+        <li><input type="checkbox" id="item1"><label for="item1">Bouclier d'Auriel</label></li>
+        <li><input type="checkbox" id="item9"><label for="item9">Bouclier runique</label></li>
+        <li><input type="checkbox" id="item13"><label for="item13">Bouclier d'Aethérium</label></li>
+        <li><input type="checkbox" id="item14"><label for="item14">Targe sanguinaire</label></li>
+        <li><input type="checkbox" id="item15"><label for="item15">Parasortis</label></li>
+        <li><input type="checkbox" id="item17"><label for="item17">Bouclier d'Ysgramor</label></li>
+        <li>
+            <h2>Parangons</h2>
+        </li>
+        <li><input type="checkbox" id="item2"><label for="item2">Parangon Diamant</label></li>
+        <li><input type="checkbox" id="item3"><label for="item3">Parangon Rubis</label></li>
+        <li><input type="checkbox" id="item4"><label for="item4">Parangon Améthyste</label></li>
+        <li><input type="checkbox" id="item5"><label for="item5">Saphir Parangon</label></li>
+        <li><input type="checkbox" id="item6"><label for="item6">Parangon Émeraude</label></li>
+        <li>
+            <h2>Pichets</h2>
+        </li>
+        <li><input type="checkbox" id="item7"><label for="item7">Pichet de l'Initié</label></li>
+        <li>
+            <h2>Arcs</h2>
+        </li>
+        <li><input type="checkbox" id="item8"><label for="item8">Arc d'Auriel</label></li>
+        <li><input type="checkbox" id="item48"><label for="item48">Arc de verre du Prince des Cerfs</label></li>
+        <li><input type="checkbox" id="item51"><label for="item51">Arc Noir du Destin</label></li>
+        <li>
+            <h2>Épées</h2>
+        </li>
+        <li><input type="checkbox" id="item10"><label for="item10">Épée d'Harkon</label></li>
+        <li>
+            <h2>Haches</h2>
+        </li>
+        <li><input type="checkbox" id="item11"><label for="item11">Hache runique de la Garde de l'Aube</label></li>
+        <li><input type="checkbox" id="item16"><label for="item16">Wuuthrad</label></li>
+        <li>
+            <h2>Marteaux</h2>
+        </li>
+        <li><input type="checkbox" id="item12"><label for="item12">Marteau runique de la Garde de l'Aube</label></li>
+        <li>
+            <h2>Dagues</h2>
+        </li>
+        <li><input type="checkbox" id="item18"><label for="item18">Lamentations</label></li>
+        <li><input type="checkbox" id="item19"><label for="item19">Dague de Mehrunes</label></li>
+        <li><input type="checkbox" id="item20"><label for="item20">Lame du Sacrifice</label></li>
+        <li><input type="checkbox" id="item21"><label for="item21">Fléortie</label></li>
+        <li><input type="checkbox" id="item22"><label for="item22">Croc de Kahvozein</label></li>
+        <li><input type="checkbox" id="item23"><label for="item23">Lame de la souffrance</label></li>
+        <li>
+            <h2>Baguettes/Sceptres</h2>
+        </li>
+        <li><input type="checkbox" id="item24"><label for="item24">Crâne de la Corruption</label></li>
+        <li><input type="checkbox" id="item25"><label for="item25">Wabbajack</label></li>
+        <li><input type="checkbox" id="item26"><label for="item26">Rose Sanguine</label></li>
+        <li><input type="checkbox" id="item27"><label for="item27">Baguette d'Archéologie</label></li>
+        <li><input type="checkbox" id="item28"><label for="item28">Bâton de Magnus</label></li>
+        <li><input type="checkbox" id="item29"><label for="item29">Bâton de Jyrik Gauldurson</label></li>
+        <li>
+            <h2>Masques</h2>
+        </li>
+        <li><input type="checkbox" id="item30"><label for="item30">Vokun</label></li>
+        <li><input type="checkbox" id="item31"><label for="item31">Nahkriin</label></li>
+        <li><input type="checkbox" id="item32"><label for="item32">Morokei</label></li>
+        <li><input type="checkbox" id="item33"><label for="item33">Hevnoraak</label></li>
+        <li><input type="checkbox" id="item34"><label for="item34">Masque en bois</label></li>
+        <li><input type="checkbox" id="item35"><label for="item35">Ahzidal</label></li>
+        <li><input type="checkbox" id="item36"><label for="item36">Zahkriisos</label></li>
+        <li><input type="checkbox" id="item37"><label for="item37">Dukaan</label></li>
+        <li><input type="checkbox" id="item38"><label for="item38">Konahrik</label></li>
+        <li><input type="checkbox" id="item39"><label for="item39">Volsung</label></li>
+        <li><input type="checkbox" id="item40"><label for="item40">Krosis</label></li>
+        <li><input type="checkbox" id="item41"><label for="item41">Otar</label></li>
+        <li><input type="checkbox" id="item42"><label for="item42">Rahgot</label></li>
+        <li>
+            <h2>Bocaux</h2>
+        </li>
+        <li><input type="checkbox" id="item43"><label for="item43">Bocal à papillon</label></li>
+        <li><input type="checkbox" id="item44"><label for="item44">Bocal à papillon de nuit</label></li>
+        <li><input type="checkbox" id="item45"><label for="item45">Bocal à libellule</label></li>
+        <li><input type="checkbox" id="item46"><label for="item46">Bocal à abeille</label></li>
+        <li><input type="checkbox" id="item47"><label for="item47">Bocal à luciole</label></li>
+        <li>
+            <h2>Cimeterres</h2>
+        </li>
+        <li><input type="checkbox" id="item49"><label for="item49">Animortis</label></li>
+        <li><input type="checkbox" id="item50"><label for="item50">Sangalfange</label></li>
+        <li>
+            <h2>Armes à deux mains</h2>
+        </li>
+        <li><input type="checkbox" id="item52"><label for="item52">Lame des Skalsangues</label></li>
+        <li><input type="checkbox" id="item53"><label for="item53">Gourdin du champion</label></li>
+        <li>
+            <h2>Griffes de dragon</h2>
+        </li>
+        <li><input type="checkbox" id="item54"><label for="item54">Griffe de dragon en verre</label></li>
+        <li><input type="checkbox" id="item55"><label for="item55">Griffe de dragon en émeraude</label></li>
+        <li><input type="checkbox" id="item56"><label for="item56">Griffe de dragon en ébène</label></li>
+        <li><input type="checkbox" id="item57"><label for="item57">Griffe de dragon en saphir</label></li>
+        <li><input type="checkbox" id="item58"><label for="item58">Griffe de dragon en rubis</label></li>
+        <li><input type="checkbox" id="item59"><label for="item59">Griffe de dragon en corail</label></li>
+        <li><input type="checkbox" id="item60"><label for="item60">Griffe de dragon en diamant</label></li>
+        <li><input type="checkbox" id="item61"><label for="item61">Griffe de dragon en fer</label></li>
+        <li><input type="checkbox" id="item62"><label for="item62">Griffe de dragon en ivoire</label></li>
+        <li><input type="checkbox" id="item63"><label for="item63">Griffe de dragon en ivoire</label></li>
+    </ul>
     <script src="/resources/script.js"></script>
 </body>
 
