blades done - temp save

--- a/index.html
+++ b/index.html
@@ -150,12 +150,41 @@
         <li>
             <h2>Dagues</h2>
         </li>
-        <li><input type="checkbox" id="item18"><label for="item18">Lamentations</label></li>
-        <li><input type="checkbox" id="item19"><label for="item19">Dague de Mehrunes</label></li>
-        <li><input type="checkbox" id="item20"><label for="item20">Lame du Sacrifice</label></li>
-        <li><input type="checkbox" id="item21"><label for="item21">Fléortie</label></li>
-        <li><input type="checkbox" id="item22"><label for="item22">Croc de Kahvozein</label></li>
-        <li><input type="checkbox" id="item23"><label for="item23">Lame de la souffrance</label></li>
+        <li>
+            <input type="checkbox" id="item18">
+            <label for="item18">Lamentations</label>
+            <button class="quest-button" data-quest="Elle s'obtient sur le cadavre d'un messager durant la quête L'entreprise d'Arniel, donnée à l'académie de Fortdhiver. Pour la lancer, il faut avoir achevé la quête 'Sous Saarthal', puis parler à Arniel Gane."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item19">
+            <label for="item19">Dague de Mehrunes</label>
+            <button class="quest-button" data-quest="Les fragments du passé"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item20">
+            <label for="item20">Lame du Sacrifice</label>
+            <button class="quest-button" data-quest="L'appel de Boéthia"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item21">
+            <label for="item21">Fléortie</label>
+            <button class="quest-button" data-quest="Les Bienfaits de la Nature"
+            >?</button>
+        </li>
+        <li><input type="checkbox" id="item22">
+            <label for="item22">Croc de Kahvozein</label>
+            <button class="quest-button" data-quest="Cette dague est aléatoire et se trouve généralement dans les mêmes endroits que les prêtres-dragons."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item23">
+            <label for="item23">Lame de la souffrance</label>
+            <button class="quest-button" data-quest="La mort incarnée"
+            >?</button>
+        </li>
         <li>
             <h2>Baguettes/Sceptres</h2>
         </li>
