masks done - temp save

--- a/index.html
+++ b/index.html
@@ -188,28 +188,75 @@
         <li>
             <h2>Baguettes/Sceptres</h2>
         </li>
-        <li><input type="checkbox" id="item24"><label for="item24">Crâne de la Corruption</label></li>
-        <li><input type="checkbox" id="item25"><label for="item25">Wabbajack</label></li>
-        <li><input type="checkbox" id="item26"><label for="item26">Rose Sanguine</label></li>
-        <li><input type="checkbox" id="item27"><label for="item27">Baguette d'Archéologie</label></li>
-        <li><input type="checkbox" id="item28"><label for="item28">Bâton de Magnus</label></li>
-        <li><input type="checkbox" id="item29"><label for="item29">Bâton de Jyrik Gauldurson</label></li>
+        <li>
+            <input type="checkbox" id="item24">
+            <label for="item24">Crâne de la Corruption</label>
+            <button class="quest-button" data-quest="La fin du cauchemar"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item25">
+            <label for="item25">Wabbajack</label>
+            <button class="quest-button" data-quest="La folie incarnée"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item26">
+            <label for="item26">Rose Sanguine</label>
+            <button class="quest-button" data-quest="Une nuit mémorable"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item27">
+            <label for="item27">Baguette d'Arachnologie</label>
+            <button class="quest-button" data-quest="Obscures réponses"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item28">
+            <label for="item28">Bâton de Magnus</label>
+            <button class="quest-button" data-quest="Le bâton de Magnus"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item29">
+            <label for="item29">Bâton de Jyrik Gauldurson</label>
+            <button class="quest-button" data-quest="Sous Saarthal"
+            >?</button>
+        </li>
         <li>
             <h2>Masques</h2>
+            <p>Dans des temps anciens, un culte voué aux dragons s'était instauré en Bordeciel.
+            </br>Maintenant qu'Alduin est de retour, les émissaires de ce culte reviennent eux aussi à la vie. 
+            </br>Au total, ce sont huit grands Prêtres-dragons qui sont éparpillés dans les donjons les plus tortueux et dangereux du pays. 
+            </br>Une fois vaincu, chacun laisse un masque aux pouvoirs surprenants derrière lui : gardez-les précieusement.</p>
         </li>
         <li><input type="checkbox" id="item30"><label for="item30">Vokun</label></li>
         <li><input type="checkbox" id="item31"><label for="item31">Nahkriin</label></li>
         <li><input type="checkbox" id="item32"><label for="item32">Morokei</label></li>
         <li><input type="checkbox" id="item33"><label for="item33">Hevnoraak</label></li>
-        <li><input type="checkbox" id="item34"><label for="item34">Masque en bois</label></li>
-        <li><input type="checkbox" id="item35"><label for="item35">Ahzidal</label></li>
-        <li><input type="checkbox" id="item36"><label for="item36">Zahkriisos</label></li>
-        <li><input type="checkbox" id="item37"><label for="item37">Dukaan</label></li>
-        <li><input type="checkbox" id="item38"><label for="item38">Konahrik</label></li>
         <li><input type="checkbox" id="item39"><label for="item39">Volsung</label></li>
         <li><input type="checkbox" id="item40"><label for="item40">Krosis</label></li>
         <li><input type="checkbox" id="item41"><label for="item41">Otar</label></li>
         <li><input type="checkbox" id="item42"><label for="item42">Rahgot</label></li>
+        <li>
+            <input type="checkbox" id="item34">
+            <label for="item34">Masque en bois</label>
+            <button class="quest-button" data-quest="Si vous parvenez à rassembler les huit masques de Prêtre-dragon après les avoir tous vaincu, rendez-vous aux abords du Labyrinthe et pénétrez dans les ruines semblables à un tertre aux dragons. Vous trouvez à l'intérieur un masque en bois et une note auprès d'un squelette."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item38">
+            <label for="item38">Konahrik</label>
+            <button class="quest-button" data-quest="équipez-vous du masque en bois pour être immédiatement transporté à un autre âge. Les statues devant vous sont restaurées, et vous pouvez donc y placer vos huit acquisitions (vous pouvez les récupérer après). Vous obtenez ainsi en récompense le masque de Konahrik, l'ultime masque des Prêtres-dragons aux propriétés surnaturelles."
+            >?</button>
+        </li>
+        <li>
+            <p>Prêtres-Dragons de Dragonborn</p>
+        </li>
+        <li><input type="checkbox" id="item35"><label for="item35">Ahzidal</label></li>
+        <li><input type="checkbox" id="item36"><label for="item36">Zahkriisos</label></li>
+        <li><input type="checkbox" id="item37"><label for="item37">Dukaan</label></li>
         <li>
             <h2>Bocaux</h2>
         </li>
