--- a/index.html
+++ b/index.html
@@ -260,34 +260,129 @@
         <li>
             <h2>Bocaux</h2>
         </li>
-        <li><input type="checkbox" id="item43"><label for="item43">Bocal à papillon</label></li>
-        <li><input type="checkbox" id="item44"><label for="item44">Bocal à papillon de nuit</label></li>
-        <li><input type="checkbox" id="item45"><label for="item45">Bocal à libellule</label></li>
-        <li><input type="checkbox" id="item46"><label for="item46">Bocal à abeille</label></li>
-        <li><input type="checkbox" id="item47"><label for="item47">Bocal à luciole</label></li>
+        <li>
+            <input type="checkbox" id="item43">
+            <label for="item43">Bocal à papillon</label>
+            <button class="quest-button" data-quest="Dans la cabane de l’alchimiste."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item44">
+            <label for="item44">Bocal à papillon de nuit</label>
+            <button class="quest-button" data-quest="Dans la crypte de la Fissure d’Aubeclaire."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item45">
+            <label for="item45">Bocal à libellule</label>
+            <button class="quest-button" data-quest="Dans la cave de la maison du chef du camp Orc de Dushnikh Yal."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item46">
+            <label for="item46">Bocal à abeille</label>
+            <button class="quest-button" data-quest="Dans la chambre d’Aringoth au Domaine Lumidor."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item47">
+            <label for="item47">Bocal à luciole</label>
+            <button class="quest-button" data-quest="Au dessus de la cheminée dans le Phare d’Hiveronde."
+            >?</button>
+        </li>
         <li>
             <h2>Cimeterres</h2>
         </li>
-        <li><input type="checkbox" id="item49"><label for="item49">Animortis</label></li>
-        <li><input type="checkbox" id="item50"><label for="item50">Sangalfange</label></li>
+        <li>
+            <input type="checkbox" id="item49">
+            <label for="item49">Animortis</label>
+            <button class="quest-button" data-quest="Le balafré"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item50">
+            <label for="item50">Sangalfange</label>
+            <button class="quest-button" data-quest="Le balafré"
+            >?</button>
+        </li>
         <li>
             <h2>Armes à deux mains</h2>
         </li>
-        <li><input type="checkbox" id="item52"><label for="item52">Lame des Skalsangues</label></li>
-        <li><input type="checkbox" id="item53"><label for="item53">Gourdin du champion</label></li>
+        <li>
+            <input type="checkbox" id="item52">
+            <label for="item52">Lame des Skalsangues</label>
+            <button class="quest-button" data-quest="La descente finale"
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item53">
+            <label for="item53">Gourdin du champion</label>
+            <button class="quest-button" data-quest="La marche macabre"
+            >?</button>
+        </li>
         <li>
             <h2>Griffes de dragon</h2>
         </li>
-        <li><input type="checkbox" id="item54"><label for="item54">Griffe de dragon en verre</label></li>
-        <li><input type="checkbox" id="item55"><label for="item55">Griffe de dragon en émeraude</label></li>
-        <li><input type="checkbox" id="item56"><label for="item56">Griffe de dragon en ébène</label></li>
-        <li><input type="checkbox" id="item57"><label for="item57">Griffe de dragon en saphir</label></li>
-        <li><input type="checkbox" id="item58"><label for="item58">Griffe de dragon en rubis</label></li>
-        <li><input type="checkbox" id="item59"><label for="item59">Griffe de dragon en corail</label></li>
-        <li><input type="checkbox" id="item60"><label for="item60">Griffe de dragon en diamant</label></li>
-        <li><input type="checkbox" id="item61"><label for="item61">Griffe de dragon en fer</label></li>
-        <li><input type="checkbox" id="item62"><label for="item62">Griffe de dragon en ivoire</label></li>
-        <li><input type="checkbox" id="item63"><label for="item63">Griffe de dragon en ivoire</label></li>
+        <li>
+            <input type="checkbox" id="item54">
+            <label for="item54">Griffe de dragon en verre</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Forelhost."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item55">
+            <label for="item55">Griffe de dragon en émeraude</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte du Rocher d'Eaulointaine."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item56">
+            <label for="item56">Griffe de dragon en ébène</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Korvanjund."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item57">
+            <label for="item57">Griffe de dragon en saphir</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte du Tertre de Voile-Foyer."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item58">
+            <label for="item58">Griffe de dragon en rubis</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Forelhost."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item59">
+            <label for="item59">Griffe de dragon en corail</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte du Tertre d'Yngol."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item60">
+            <label for="item60">Griffe de dragon en diamant</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Skuldafn."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item61">
+            <label for="item61">Griffe de dragon en fer</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Valthume."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item62">
+            <label for="item62">Griffe de dragon en ivoire</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte de Folgunthur."
+            >?</button>
+        </li>
+        <li>
+            <input type="checkbox" id="item63">
+            <label for="item63">Griffe de dragon en or</label>
+            <button class="quest-button" data-quest="Elle permet d'ouvrir la grande porte du Tertre des Chutes Tourmentées."
+            >?</button>
+        </li>
     </ul>
     <script src="/resources/script.js"></script>
 </body>
