quest table done

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <li>
             <input type="checkbox" id="item21">
             <label for="item21">Fléortie</label>
-            <button class="quest-button" data-quest="Les Bienfaits de la Nature"
+            <button class="quest-button" data-quest="Les bienfaits de la nature"
             >?</button>
         </li>
         <li><input type="checkbox" id="item22">
@@ -181,7 +181,8 @@
         </li>
         <li>
             <input type="checkbox" id="item23">
-            <label for="item23">Lame de la souffrance</label>
+            <label for="item23">
+            </label>
             <button class="quest-button" data-quest="La mort incarnée"
             >?</button>
         </li>
@@ -384,7 +385,97 @@
             >?</button>
         </li>
     </ul>
-    <script src="/resources/script.js"></script>
+    <h2>Quêtes</h2>
+    <p>Si l'une de ces quêtes a été terminée et que vous ne possédez pas/plus l'item qui y est lié,
+        soit vous devriez y retourner, soit Belethor a fait une super affaire.
+    </p>
+    <table>
+        <tr>
+          <th>Quête</th>
+          <th>Item Associé</th>
+        </tr>
+        <tr>
+          <td>Jugement d'un pair</td>
+          <td>Épée d'Harkon</td>
+        </tr>
+        <tr>
+          <td>L'appel de Boéthia</td>
+          <td>Lame du Sacrifice</td>
+        </tr>
+        <tr>
+          <td>La descente finale</td>
+          <td>Lame des Skalsangues</td>
+        </tr>
+        <tr>
+          <td>La fin du cauchemar</td>
+          <td>Crâne de la Corruption</td>
+        </tr>
+        <tr>
+          <td>La folie incarnée</td>
+          <td>Wabbajack</td>
+        </tr>
+        <tr>
+          <td>La marche macabre</td>
+          <td>Gourdin du champion</td>
+        </tr>
+        <tr>
+          <td>La mort incarnée</td>
+          <td>Lame de la souffrance</td>
+        </tr>
+        <tr>
+          <td>La quête de l'extraordinaire</td>
+          <td>Targe sanguinaire</td>
+        </tr>
+        <tr>
+          <td>Le balafré</td>
+          <td>Animortis</br>Sangalfange</td>
+        </tr>
+        <tr>
+          <td>Le bâton de Magnus</td>
+          <td>Bâton de Magnus</td>
+        </tr>
+        <tr>
+          <td>Le seul remède</td>
+          <td>Parasortis</td>
+        </tr>
+        <tr>
+          <td>Les bienfaits de la nature</td>
+          <td>Fléortie</td>
+        </tr>
+        <tr>
+          <td>Les fragments du passé</td>
+          <td>Dague de Mehrunes</td>
+        </tr>
+        <tr>
+          <td>Obscures réponses</td>
+          <td>Baguette d'Arachnologie</td>
+        </tr>
+        <tr>
+          <td>Perdue dans les Âges</td>
+          <td>Bouclier d'Aethérium</td>
+        </tr>
+        <tr>
+          <td>Relique perdue</td>
+          <td>Bouclier runique</br>Hache runique de la Garde de l'Aube</br>Marteau runique de la Garde de l'Aube</td>
+        </tr>
+        <tr>
+          <td>Sous Saarthal</td>
+          <td>Bâton de Jyrik Gauldurson</td>
+        </tr>
+        <tr>
+          <td>Toucher le ciel</td>
+          <td>Pichet de l'Initié</br>Arc d'Auriel</td>
+        </tr>
+        <tr>
+          <td>Une nuit mémorable</td>
+          <td>Rose Sanguine</td>
+        </tr>
+      </table>
+      
+      
+    <footer>
+        <script src="/resources/script.js"></script>
+    </footer>
 </body>
 
 </html>
