--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/src/style.css" rel="stylesheet" />
+    <link href="./dist/output.css" rel="stylesheet" />
     <title>Document</title>
 </head>
 
 <body>
     <ul id="todo-list">
         <li>
-            <h2>Boucliers</h2>
+            <h2 class="text-red-500">Boucliers</h2>
         </li>
         <li>
             <input type="checkbox" id="item1">
