font size and placement base OK - table to do

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./dist/output.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>La Galerie de Myrwatch</title>
 </head>
 
 <body>
-    <ul id="todo-list">
+    <h1 class="text-4xl text-center mt-4 uppercase">La galerie de Myrwatch</h1>
+    <h3 class="text-sm italic text-center mb-4">Skyrim Anniversary Edition</h3>
+    <ul class="m-4" id="todo-list">
         <li>
-            <h2 class="text-red-500">Boucliers</h2>
+            <h2 class="text-xl">Boucliers</h2>
         </li>
         <li>
             <input type="checkbox" id="item1">
@@ -46,8 +48,8 @@
                 data-quest="Trouvé dans le coffre situé dans la dernière salle du tombeau d’Ysgramor">?</button>
         </li>
         <li>
-            <h2>Parangons</h2>
-            <p>Dans le Val Oublié, vous aurez l’opportunité d’affronter des géants de glace afin de récupérer les Gemmes
+            <h2 class="mt-4 text-xl">Parangons</h2>
+            <p class="text-sm my-2">Dans le Val Oublié, vous aurez l’opportunité d’affronter des géants de glace afin de récupérer les Gemmes
                 Parangon.
                 </br>Au nombre de cinq, celles-ci vous permettront d’atteindre des lieux secrets en utilisant le Portail
                 Parangon situé à l’Ouest de l’Autel de la Vue.</p>
@@ -81,7 +83,7 @@
                 data-quest="Derrière une cabane Falmer à l’Est de l’entrée de la Grotte de la Pente Raide. Cette Gemme est indispensable pour obtenir le deuxième livre du Val Oublié.">?</button>
         </li>
         <li>
-            <h2>Pichet</h2>
+            <h2 class="mt-4 text-xl">Pichet</h2>
         </li>
         <li>
             <input type="checkbox" id="item7">
@@ -89,7 +91,7 @@
             <button class="quest-button" data-quest="Toucher le ciel">?</button>
         </li>
         <li>
-            <h2>Arcs</h2>
+            <h2 class="mt-4 text-xl">Arcs</h2>
         </li>
         <li>
             <input type="checkbox" id="item8">
@@ -104,7 +106,7 @@
         </li>
         <li><input type="checkbox" id="item51"><label for="item51">Arc Noir du Destin</label></li>
         <li>
-            <h2>Épée</h2>
+            <h2 class="mt-4 text-xl">Épée</h2>
         </li>
         <li>
             <input type="checkbox" id="item10">
@@ -112,7 +114,7 @@
             <button class="quest-button" data-quest="Jugement d’un pair">?</button>
         </li>
         <li>
-            <h2>Haches</h2>
+            <h2 class="mt-4 text-xl">Haches</h2>
         </li>
         <li>
             <input type="checkbox" id="item11">
@@ -126,7 +128,7 @@
                 data-quest="Wuuthrad est la récompense ultime pour avoir terminé la série de quêtes Compagnons, qui commence dans le Jorrvaskr de Whiterun.">?</button>
         </li>
         <li>
-            <h2>Marteau</h2>
+            <h2 class="mt-4 text-xl">Marteau</h2>
         </li>
         <li>
             <input type="checkbox" id="item12">
@@ -134,7 +136,7 @@
             <button class="quest-button" data-quest="Relique perdue">?</button>
         </li>
         <li>
-            <h2>Dagues</h2>
+            <h2 class="mt-4 text-xl">Dagues</h2>
         </li>
         <li>
             <input type="checkbox" id="item18">
@@ -164,12 +166,12 @@
         </li>
         <li>
             <input type="checkbox" id="item23">
-            <label for="item23">
+            <label for="item23">Lame de la Souffrance
             </label>
             <button class="quest-button" data-quest="La mort incarnée">?</button>
         </li>
         <li>
-            <h2>Baguettes/Sceptres</h2>
+            <h2 class="mt-4 text-xl">Baguettes/Sceptres</h2>
         </li>
         <li>
             <input type="checkbox" id="item24">
@@ -202,22 +204,22 @@
             <button class="quest-button" data-quest="Sous Saarthal">?</button>
         </li>
         <li>
-            <h2>Masques</h2>
-            <p>Dans des temps anciens, un culte voué aux dragons s'était instauré en Bordeciel.
+            <h2 class="mt-4 text-xl">Masques</h2>
+            <p class="text-sm my-2">Dans des temps anciens, un culte voué aux dragons s'était instauré en Bordeciel.
                 </br>Maintenant qu'Alduin est de retour, les émissaires de ce culte reviennent eux aussi à la vie.
                 </br>Au total, ce sont huit grands Prêtres-dragons qui sont éparpillés dans les donjons les plus
                 tortueux et dangereux du pays.
                 </br>Une fois vaincu, chacun laisse un masque aux pouvoirs surprenants derrière lui : gardez-les
                 précieusement.</p>
         </li>
-        <li><input type="checkbox" id="item30"><label for="item30">Vokun</label></li>
-        <li><input type="checkbox" id="item31"><label for="item31">Nahkriin</label></li>
-        <li><input type="checkbox" id="item32"><label for="item32">Morokei</label></li>
-        <li><input type="checkbox" id="item33"><label for="item33">Hevnoraak</label></li>
-        <li><input type="checkbox" id="item39"><label for="item39">Volsung</label></li>
-        <li><input type="checkbox" id="item40"><label for="item40">Krosis</label></li>
-        <li><input type="checkbox" id="item41"><label for="item41">Otar</label></li>
-        <li><input type="checkbox" id="item42"><label for="item42">Rahgot</label></li>
+        <li><input type="checkbox" id="item30"><label for="item30"> Vokun</label></li>
+        <li><input type="checkbox" id="item31"><label for="item31"> Nahkriin</label></li>
+        <li><input type="checkbox" id="item32"><label for="item32"> Morokei</label></li>
+        <li><input type="checkbox" id="item33"><label for="item33"> Hevnoraak</label></li>
+        <li><input type="checkbox" id="item39"><label for="item39"> Volsung</label></li>
+        <li><input type="checkbox" id="item40"><label for="item40"> Krosis</label></li>
+        <li><input type="checkbox" id="item41"><label for="item41"> Otar</label></li>
+        <li><input type="checkbox" id="item42"><label for="item42"> Rahgot</label></li>
         <li>
             <input type="checkbox" id="item34">
             <label for="item34">Masque en bois</label>
@@ -231,13 +233,13 @@
                 data-quest="équipez-vous du masque en bois pour être immédiatement transporté à un autre âge. Les statues devant vous sont restaurées, et vous pouvez donc y placer vos huit acquisitions (vous pouvez les récupérer après). Vous obtenez ainsi en récompense le masque de Konahrik, l'ultime masque des Prêtres-dragons aux propriétés surnaturelles.">?</button>
         </li>
         <li>
-            <p>Prêtres-Dragons de Dragonborn</p>
+            <p class="text-lg my-1">Prêtres-Dragons de Dragonborn</p>
         </li>
-        <li><input type="checkbox" id="item35"><label for="item35">Ahzidal</label></li>
-        <li><input type="checkbox" id="item36"><label for="item36">Zahkriisos</label></li>
-        <li><input type="checkbox" id="item37"><label for="item37">Dukaan</label></li>
+        <li><input type="checkbox" id="item35"><label for="item35"> Ahzidal</label></li>
+        <li><input type="checkbox" id="item36"><label for="item36"> Zahkriisos</label></li>
+        <li><input type="checkbox" id="item37"><label for="item37"> Dukaan</label></li>
         <li>
-            <h2>Bocaux</h2>
+            <h2 class="mt-4 text-xl">Bocaux</h2>
         </li>
         <li>
             <input type="checkbox" id="item43">
@@ -266,7 +268,7 @@
             <button class="quest-button" data-quest="Au dessus de la cheminée dans le Phare d’Hiveronde.">?</button>
         </li>
         <li>
-            <h2>Cimeterres</h2>
+            <h2 class="mt-4 text-xl">Cimeterres</h2>
         </li>
         <li>
             <input type="checkbox" id="item49">
@@ -279,7 +281,7 @@
             <button class="quest-button" data-quest="Le balafré">?</button>
         </li>
         <li>
-            <h2>Armes à deux mains</h2>
+            <h2 class="mt-4 text-xl">Armes à deux mains</h2>
         </li>
         <li>
             <input type="checkbox" id="item52">
@@ -292,7 +294,7 @@
             <button class="quest-button" data-quest="La marche macabre">?</button>
         </li>
         <li>
-            <h2>Griffes de dragon</h2>
+            <h2 class="mt-4 text-xl">Griffes de dragon</h2>
         </li>
         <li>
             <input type="checkbox" id="item54">
@@ -348,11 +350,12 @@
                 data-quest="Elle permet d'ouvrir la grande porte du Tertre des Chutes Tourmentées.">?</button>
         </li>
     </ul>
-    <h2>Quêtes</h2>
-    <p>Si l'une de ces quêtes a été terminée et que vous ne possédez pas/plus l'item qui y est lié,
+    <h2 class="m-4 text-xl">Quêtes</h2>
+    <p class="m-4">Si l'une de ces quêtes a été terminée et que vous ne possédez pas/plus l'item qui y est lié,
         soit vous devriez y retourner, soit Belethor a fait une super affaire.
     </p>
-    <table>
+    <img src="./src/cxSUHdY.jpeg" alt="Belethor" class="justify-center m-auto">
+    <table class="m-4">
         <tr>
             <th>Quête</th>
             <th>Item Associé</th>
