table ok for now

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         soit vous devriez y retourner, soit Belethor a fait une super affaire.
     </p>
     <img src="./src/cxSUHdY.jpeg" alt="Belethor" class="justify-center m-auto">
-    <table class="m-4">
+    <table class="justify-center flex m-auto mt-4">
         <tr>
             <th>Quête</th>
             <th>Item Associé</th>
