--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./dist/output.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="/src/favicon.ico">
     <title>La Galerie de Myrwatch</title>
 </head>
 
 <body>
-    <h1 class="text-4xl text-center mt-4 uppercase">La galerie de Myrwatch</h1>
-    <h3 class="text-sm italic text-center mb-4">Skyrim Anniversary Edition</h3>
-    <ul class="m-4" id="todo-list">
+    <div id="header">
+        <h1 class="text-4xl text-center mt-4 uppercase">La galerie de Myrwatch</h1>
+        <h3 class="text-sm italic text-center mb-4">Skyrim Anniversary Edition</h3>
+    </div>
+        <ul class="m-4" id="todo-list">
         <li>
             <h2 class="text-xl">Boucliers</h2>
         </li>
